...
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        Expanded(
                          child: Padding(
                            padding: const EdgeInsets.only(top: 16),
                            child: Text(
                              'Your Digital\nVault.',
                              style: theme.textTheme.displayMedium,
                            ),
                          ),
                        ),
                        IconButton(
                          icon: const Icon(Icons.settings_outlined),
...
