...
        ButtonSegment(
          value: ReplayGainMode.off,
          label: Text('Off'),
        ),
        ButtonSegment(
          value: ReplayGainMode.track,
          label: Text('Track'),
        ),
        ButtonSegment(
          value: ReplayGainMode.album,
          label: Text('Album'),
        ),
      ],
      selected: {mode},
      onSelectionChanged: (selection) {
        ref.read(replayGainModeProvider.notifier).setMode(selection.first);
      },
...
