...
    if (tracks != null &&
        tracks.isNotEmpty &&
        tracks.every((t) => t.qualityCheckedAt != null)) {
      return 'Re-analyse Quality';
    }

    return 'Analyse Quality';
  }
}

